name:          morse
version:       0.1.0.0
license-file:  LICENSE
author:        Chris Allen
maintainer:    cma@bitemyapp.com
category:      Text
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:  Morse
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >= 4.7 && < 5
                  , containers
                  , QuickCheck
  hs-source-dirs:   src
  default-language: Haskell2010

executable morse
  main-is:          Main.hs
  ghc-options:      -Wall -fwarn-tabs
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , containers
                  , morse
                  , QuickCheck
  default-language: Haskell2010
